--- a/Resources/i18n/sv.json
+++ b/Resources/i18n/sv.json
@@ -1,6 +1,6 @@
 {
 	"main":{
-		"searchHint":"Hitta ett skin...",
+		"searchHint":"S\u00f6k bland dina skin...",
 		"skinList":"skin lista",
 		"addSkin":"L\u00e4gg till ett skin",
 		"editSettings":"\u00e4ndra inst\u00e4llningar",
@@ -45,8 +45,8 @@
 		"password":"L\u00f6senord",
 		"header":"Minecraft.net inloggningsuppgifter",
 		"footer":{
-			"migratedAccount":"Om ditt konto har migrerats till Mojangkonto, m\u00e5ste du anv\u00e4nda din e-postadress i st\u00e4llet f\u00f6r ditt anv\u00e4ndarnamn p\u00e5 Minecraft.",
-			"privacy":"Obs: vi kommer aldrig lagra eller anv\u00e4nda n\u00e5gon av din information f\u00f6r n\u00e5got annat \u00e4n att byta din Minecraft skins. Din kontoinformation lagras s\u00e4kert i iOS s\u00e4kerhet."
+			"migratedAccount":"Om ditt konto har migrerats till ett Mojangkonto, m\u00e5ste du anv\u00e4nda din e-postadress ist\u00e4llet f\u00f6r ditt anv\u00e4ndarnamn p\u00e5 Minecraft.",
+			"privacy":"Obs: vi kommer aldrig att lagra eller anv\u00e4nda n\u00e5gon av din information f\u00f6r n\u00e5got annat \u00e4n att byta din Minecraft skins. Din kontoinformation lagras s\u00e4kert i iOS s\u00e4kerhet."
 		}
 	},
 	"addProcess":{
@@ -98,7 +98,7 @@
 		"title":"Tack till",
 		"developer":"Utvecklare:",
 		"platform":"Plattform:",
-		"translators":"Translators:",
+		"translators":"\u00d6vers\u00e4ttare:",
 		"thanks":"Speciellt tack till:",
 		"modules":"Moduler:"
 	},
