--- a/Resources/i18n/de.json
+++ b/Resources/i18n/de.json
@@ -2,19 +2,19 @@
 	"main":{
 		"searchHint":"Finden eine Skin...",
 		"skinList":"Skins Liste",
-		"addSkin":"f\u00fcgen Sie eine Haut",
+		"addSkin":"fügen Sie eine Haut",
 		"editSettings":"editieren Einstellung",
 		"skinDetails":{
 			"title":"Skins Einzelheiten",
 			"description":"Beschreibung",
-			"creation":"Datum der Sch\u00f6pfung",
+			"creation":"Datum der Schöpfung",
 			"wear":"Tragen diesen Skin",
 			"close":"Schliessen"
 		},
-		"noSelectedSkin":"Keine Skin  ausgew\u00e4hlt.",
+		"noSelectedSkin":"Keine Skin  ausgewählt.",
 		"noContent":{
-			"title":"Keine Haut wurde noch hinzugef\u00fcgt.",
-			"help":"Um einen Skin hinzuf\u00fcgen, schreiben \"+\"."
+			"title":"Keine Haut wurde noch hinzugefügt.",
+			"help":"Um einen Skin hinzufügen, schreiben \"+\"."
 		},
 		"skins":"%s skins",
 		"progressBar":{
@@ -33,9 +33,9 @@
 			},
 			"error":{
 				"title":"Hochladen Fehler",
-				"login":"Konnte keine Verbindung zum minecraft.net anzumelden. Bitte \u00fcberpr\u00fcfen Sie Ihren Benutzernamen und Passwort in den Einstellungen.",
-				"server":"Nicht erreichen konnte minecraft.net. Die Website ist au\u00dfer Betrieb. Pr\u00fcfen http:\/\/help.mojang.com und sp\u00e4ter wiederholen.",
-				"upload":"Das Hochladen des Haut minecraft.net. Bitte versuchen Sie es sp\u00e4ter erneut."
+				"login":"Konnte keine Verbindung zum minecraft.net anzumelden. Bitte überprüfen Sie Ihren Benutzernamen und Passwort in den Einstellungen.",
+				"server":"Nicht erreichen konnte minecraft.net. Die Website ist außer Betrieb. Prüfen http:\/\/help.mojang.com und später wiederholen.",
+				"upload":"Das Hochladen des Haut minecraft.net. Bitte versuchen Sie es später erneut."
 			}
 		}
 	},
@@ -45,7 +45,7 @@
 		"password":"Kennwort",
 		"header":"Minecraft.net Anmeldeinformationen",
 		"footer":{
-			"migratedAccount":"Wenn Ihr Konto zu einem Mojang Konto migriert wurde, m\u00fcssen Sie Ihre E-Mail-Adresse anstelle Ihres Minecraft Benutzernamen verwenden.",
+			"migratedAccount":"Wenn Ihr Konto zu einem Mojang Konto migriert wurde, müssen Sie Ihre E-Mail-Adresse anstelle Ihres Minecraft Benutzernamen verwenden.",
 			"privacy":"Bemerkung: Wir werden nie Ihre Informationen speichern oder benutzen. Wir wechseln nur Ihres SKin. Ihren Konteinformationen sind auch in Sicherheit mit dem iOS Kaychain speichern."
 		}
 	},
@@ -54,23 +54,23 @@
 			"title":"Skins Informationen",
 			"shortTitle":"Skins Info",
 			"name":"Skins Name",
-			"nameHint":"Mein wundersch\u00f6nes Skin",
+			"nameHint":"Mein wunderschönes Skin",
 			"description":"Beschreibung",
 			"error":{
-				"name":"Sie mussen ein Name f\u00fcr dieses Skin ausw\u00e4hlen."
+				"name":"Sie mussen ein Name für dieses Skin auswählen."
 			},
 			"method":{
-				"title":"Dieses Skin hinzuf\u00fcgen...",
+				"title":"Dieses Skin hinzufügen...",
 				"pseudo":"Von ein bestehender Spieler",
 				"url":"Von eine URL",
 				"cancel":"Abbrechen"
 			}
 		},
 		"urlSelect":{
-			"urlTitle":"Einf\u00fcgen Sie oder tippen Sie die SkinURL (Muss ein PNG File sein):",
-			"pseudoTitle":"Tippen Sie das Minecraft Username hier (Gro\u00df-\/Kleinschreibung beachten):",
+			"urlTitle":"Einfügen Sie oder tippen Sie die SkinURL (Muss ein PNG File sein):",
+			"pseudoTitle":"Tippen Sie das Minecraft Username hier (Groß-\/Kleinschreibung beachten):",
 			"blankField":"Dieses Feld darf nicht leer sein.",
-			"invalidUrl":"Diese URL ist ung\u00fcltig (Muss ein PNG-File sein)."
+			"invalidUrl":"Diese URL ist ungültig (Muss ein PNG-File sein)."
 		},
 		"process":{
 			"title":"Verarbeitung...",
@@ -79,33 +79,33 @@
 				"skin":"Skin wird heruntergeladen...",
 				"preview":"Skin-Vorschau wird heruntergeladen...",
 				"database":"Skin wird im Datenbank registriert...",
-				"success":"Das Skin wurde erfolgreich hinzugef\u00fcgt! :)",
+				"success":"Das Skin wurde erfolgreich hinzugefügt! :)",
 				"fail":"Digital-Fehler :("
 			},
 			"error":{
 				"skin":"Fehler beim Herunterladen des Skins. Wird abgebrochen.",
 				"preview":{
 					"title":"Netzwerkfehler",
-					"message":"Fehler beim Herunterladen der Vorschau. Es wird keine Vorschau f\u00fcr diese Haut geben. Installation fortsetzen?",
+					"message":"Fehler beim Herunterladen der Vorschau. Es wird keine Vorschau für diese Haut geben. Installation fortsetzen?",
 					"cancel":"Abbrechen",
 					"ok":"Weiter"
 				}
 			}
 		},
-		"next":"N\u00e4chste"
+		"next":"Nächste"
 	},
 	"credits":{
 		"title":"Credits",
 		"developer":"Entwickler:",
 		"platform":"Plattform:",
-		"translators":"\u00dcbersetzern:",
+		"translators":"Übersetzern:",
 		"thanks":"Besonderen Dank an:",
 		"modules":"Module:"
 	},
 	"buttons":{
 		"edit":"Bearbeiten",
 		"done":"Fertig",
-		"close":"Schlie\u00dfen"
+		"close":"Schließen"
 	},
 	"editSkin":{
 		"short":"Bearbeiten",
@@ -113,7 +113,7 @@
 	},
 	"restoreDatabase":{
 		"title":"Uh oh...",
-		"message":"Aus irgendeinem Grund waren wir nicht in der Lage,um die Datei mit Ihren Skins zu \u00f6ffnen.\nGl\u00fccklicherweise gibt es ein Backup von %s.\nM\u00f6chten Sie es wiederherstellen?",
+		"message":"Aus irgendeinem Grund waren wir nicht in der Lage,um die Datei mit Ihren Skins zu öffnen.\nGlücklicherweise gibt es ein Backup von %s.\nMöchten Sie es wiederherstellen?",
 		"no":"Nein, danke.",
 		"yes":"Jetzt geht's los !"
 	}
