Add setting to disable iCloud sync

--- a/platform/iphone/Settings.bundle/en.lproj/Root.strings
+++ b/platform/iphone/Settings.bundle/en.lproj/Root.strings
@@ -8,5 +8,7 @@
 	<string>Name</string>
 	<key>date</key>
 	<string>Date of Creation</string>
+	<key>icloud</key>
+	<string>Sync to iCloud</string>
 </dict>
 </plist>
