Add challenge help and style the window

--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -91,6 +91,12 @@
 					"cancel":"Cancel",
 					"ok":"Continue"
 				}
+			},
+			"challenge":{
+				"help":"You need to answer this question because you are trying to access your Mojang account from a different location.\n\nIf you forgot the answer, you can try answering another question by closing this window and trying again (it's random).\n\nIf you really can't remember, please visit help.mojang.com for instructions on resetting your questions.",
+				"cancel":"Cancel",
+				"continue":"Continue",
+				"hint": "Answer"
 			}
 		},
 		"next":"Next"
