Add an indicator label on search page

--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -73,7 +73,12 @@
 		},
 		"search":{
 			"select":"Select this skin",
-			"searchHint":"Search on MC Network"
+			"searchHint":"Search on MC Network...",
+			"indicator":{
+				"searchResults":"Search Results for: %s",
+				"noResults":"No results for: %s",
+				"random":"Random Skins"
+			}
 		},
 		"process":{
 			"title":"Processing...",
